# gitstar-gitwiki

./: .env  .gitignore  Controllers.hs  GitWiki.hs  Layouts.hs  Main.hs  Makefile  README  Utils.hs  database.conf  gitstar-gitwiki.cabal  mime.types
Controllers/: Welcome.hs  Wiki.hs
Views/: Welcome.hs  Wiki.hs
static/css/: application.css  prettify.css
static/js/: application.js
