Name:           gitstar-gitwiki
Version:        0.1.2
build-type:     Simple
License:        GPL-2
License-File:   LICENSE
Author:         HAILS team
Maintainer:     Amit Levy <levya at cs.stanford dot edu>, Deian Stefan  <deian at cs dot stanford dot edu>
Stability:      experimental
Synopsis:       Simple GitStar Git-based wiki
Category:       Web
Cabal-Version:  >= 1.6

Description:
        GitStar app that implements a simple wiki

X-Hails-Server: GitWiki

Library
  Build-Depends: base >= 4.5 && < 5,
                 containers >= 0.4.2 && < 0.5,
                 bytestring >= 0.9 && < 1,
                 transformers >= 0.2.2 && < 0.3,
                 base64-bytestring >= 0.1.1.2 && < 0.2,
                 filepath >= 1.3 && <2,
                 lio >= 0.1.3 && < 0.2,
                 iterIO >= 0.2.2 && < 0.3,
                 iterio-server >= 0.3.1 && < 0.5,
                 gitstar >= 0.1.2 && < 1.0,
                 hails >= 0.1.2 && < 1.0,
                 blaze-html == 0.4.3.3,
                 pandoc == 1.9.2

  Ghc-Options: -Wall -fno-warn-orphans
  Extensions: Safe
  Other-Modules: GitWiki
